--- a/projects/ngxflip/src/lib/flip.component.scss
+++ b/projects/ngxflip/src/lib/flip.component.scss
@@ -7,53 +7,29 @@
     height: 100%;
     width: 100%;
     position: relative;
+  }
 
-    &.rotate {
-      -webkit-transform: rotateY(180deg);
-      -moz-transform: rotateY(180deg);
-      -o-transform: rotateY(180deg);
-      transform: rotateY(180deg);
-
-      .front {
-        z-index: 1;
-      }
-
-      .back {
-        z-index: 2;
-      }
-    }
-
-    .front,
-    .back {
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      top: 0;
-      left: 0;
-    }
-    .front {
-      z-index: 2;
-      -webkit-transform: rotateY(0deg);
-      -moz-transform: rotateY(0deg);
-      -o-transform: rotateY(0deg);
-      transform: rotateY(0deg);
-      backface-visibility: hidden;
-
-      transition-property: z-index;
-      transition-duration: 0.3s;
-      transition-timing-function: ease-in-out;
-      transition-delay: 0s;
-    }
-    .back {
-      -webkit-transform: rotateY(180deg);
-      -moz-transform: rotateY(180deg);
-      -o-transform: rotateY(180deg);
-      transform: rotateY(180deg);
-
-      transition-property: z-index;
-      transition-duration: 0.3s;
-      transition-timing-function: ease-in-out;
-      transition-delay: 0s;
-    }
+  .front,
+  .back {
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  .front {
+    z-index: 2;
+    transform: rotateY(0deg);
+  }
+  .back {
+    transform: rotateY(180deg);
+  }
+  .rotate {
+    -webkit-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
+    -o-transform: rotateY(180deg);
+    transform: rotateY(180deg);
   }
 }
+
