--- a/projects/ngxflip/src/lib/flip.component.scss
+++ b/projects/ngxflip/src/lib/flip.component.scss
@@ -13,10 +13,14 @@
   .back {
     width: 100%;
     height: 100%;
-    backface-visibility: hidden;
     position: absolute;
     top: 0;
     left: 0;
+
+    transition-property: z-index;
+    transition-duration: 0.3s;
+    transition-timing-function: ease-in-out;
+    transition-delay: 0s;
   }
   .front {
     z-index: 2;
@@ -30,6 +34,13 @@
     -moz-transform: rotateY(180deg);
     -o-transform: rotateY(180deg);
     transform: rotateY(180deg);
+
+    .front {
+      z-index: 1 !important;
+    }
+
+    .back {
+      z-index: 2 !important;
+    }
   }
 }
-
